Added support for Nordeas new site changes Lots of fixes