@@ -21,6 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <encoding>UTF-8</encoding>
         <java.version>1.8</java.version>
     </properties>
 
@@ -52,10 +53,16 @@
         </dependency>
 
         <!-- csv -->
+        <!-- TO BE REMOVED! -->
+        <!-- <dependency> -->
+        <!-- <groupId>com.opencsv</groupId> -->
+        <!-- <artifactId>opencsv</artifactId> -->
+        <!-- <version>4.3.2</version> -->
+        <!-- </dependency> -->
         <dependency>
-            <groupId>com.opencsv</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>4.3.2</version>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- Spreadsheet -->
@@ -113,6 +120,19 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+                <configuration>
+                    <junitArtifactName>junit:junit</junitArtifactName>
+                    <encoding>UTF-8</encoding>
+                    <inputEncoding>UTF-8</inputEncoding>
+                    <outputEncoding>UTF-8</outputEncoding>
+                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+                        -Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
